--- a/package.json
+++ b/package.json
@@ -3,6 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "nyc": {
+    "include": [
+      "utils/UserUtil.js"
+    ],
+    "exclude": [],
+    "reporter": [
+      "text-summary"
+    ],
+    "all": true,
+    "check-coverage": true,
+    "branches": 80,
+    "lines": 80,
+    "functions": 80,
+    "statements": 80
+  },
   "scripts": {
     "test": "nyc mocha tests/*.test.js"
   },
