--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "mocha": "^10.2.0",
-    "nodemailer": "^6.9.7",
+    "nodemailer": "^6.9.7"
 
   }
 }
