--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "statements": 80
   },
   "scripts": {
+    "test": "nyc mocha tests/test.js",
+    "start": "node index.js"
 
   },
   "author": "",
