--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  build-caras13:
+  build-rms:
     build:
       context: .
-      dockerfile: DockerfileCaras13
-    image: caras13/test-docker-img:v2
-    container_name: test-docker-container
+      dockerfile: Dockerfile
+    image: dannyfitri/rms-docker-danial:latest
+    container_name: rms-docker-container
