--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "include": [
       "utils/UserUtil.js",
       "utils/ResourceUtil.js",
-      "index.js"
+      "index.js",
+      "public/**/*.js"
     ],
     "exclude": [],
     "reporter": [
@@ -23,7 +24,9 @@
   "scripts": {
     "test": "nyc mocha tests/*test.js --timeout 10000 --exit",
     "start": "node index.js",
-    "clean": "npx nyc clean"
+    "clean": "npx nyc clean",
+    "frontend-instrument": "nyc instrument .\\public\\js .\\public\\instrumented\\js && copy .\\public\\*.html .\\public\\instrumented\\ && copy .\\public\\images .\\public\\instrumented\\ && copy .\\public\\css .\\public\\instrumented\\ && del .\\coverage-frontend\\*.json",
+    "frontend-report": "nyc report --reporter html --reporter text -t coverage-frontend --report-dir coverage-frontend/summary"
   },
   "author": "",
   "license": "ISC",
