--- a/rms-deployments.yaml
+++ b/rms-deployments.yaml
@@ -14,6 +14,6 @@ spec: # defines the desired state of the Deployment.
     spec: # specifies the container(s) to run
       containers: 
       - name: rms-container
-        image: dannyfitri/rms-docker-danialv1:latest
+        image: dannyfitri/rms-docker-danialv1:v3
         ports: 
         - containerPort: 5050 # specifies the port that the application listens on
