--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "nyc": {
     "include": [
       "public/home.html",
-      "utils/ResourceUtil.js",
-      "utils/UserUtil.js"
+      "utils/ResourceUtil.js"
     ],
     "exclude": [],
     "reporter": [
@@ -21,11 +20,9 @@
     "statements": 80
   },
   "scripts": {
-    "test": "nyc mocha tests/*test.js --timeout 10000 --exit",
+    "test": "nyc mocha tests/fvDemo.test.js --timeout 10000 --exit",
     "start": "node index.js",
-    "clean": "npx nyc clean",
-    "frontend-instrument": "nyc instrument .\\public\\js .\\public\\instrumented\\js && copy .\\public\\*.html .\\public\\instrumented\\ && copy .\\public\\images .\\public\\instrumented\\ && copy .\\public\\css .\\public\\instrumented\\ && del .\\coverage-frontend\\*.json",
-    "frontend-report": "nyc report --reporter html --reporter text -t coverage-frontend --report-dir coverage-frontend/summary"
+    "clean": "npx nyc clean"
   },
   "keywords": [],
   "devDependencies": {
